--- a/src/components/tabset/tabset.html
+++ b/src/components/tabset/tabset.html
@@ -1,5 +1,3 @@
-
-<section class="tabset">
-  <h1>bleeaaa suka da!</h1>
-</section>
-
+<md-button class="md-fab">
+	<md-icon>menu</md-icon>
+</md-button>
