added displaying list of tabs

--- a/src/components/tabset/tabset.html
+++ b/src/components/tabset/tabset.html
@@ -1,7 +1,10 @@
 <div>
-	<div v-for="tabset in tabsets">
-		<div v-for="tab in tabset">
-			{{tab.url}}
-		</div>
-	</div>
+	<md-list v-for="tabset in tabsets">
+		<md-list-item v-for="tab in tabset">
+			<div>
+			<img style="width:16px;height:16px;" :src="tab.favIconUrl"/>
+			<router-link style="position: absolute; left: 40px;" md-alignment="left" to=tab.url>{{tab.title}}</router-link>
+			</div>
+		</md-list-item>
+	</md-list>
 </div>
