--- a/src/components/tab/tab.html
+++ b/src/components/tab/tab.html
@@ -1,1 +1,8 @@
-<h2>TAB COMPONENT</h2>
+<div>
+	<md-list-item v-for="tab in tabset">
+		<div>
+			<img style="width:16px;height:16px;" :src="tab.favIconUrl"/>
+			<router-link style="position: absolute; left: 40px;" md-alignment="left" to=tab.url>{{tab.title}}</router-link>
+		</div>
+	</md-list-item>
+</div>
