added :key attribute to tabsets and tabs

--- a/src/components/tabset/tabset.html
+++ b/src/components/tabset/tabset.html
@@ -1,5 +1,5 @@
 <div>
-	<md-list v-for="tabset in tabsets">
+	<md-list v-for="tabset in tabsets" :key="+new Date()">
 		<tab :tabset="tabset"/>
 	</md-list>
 </div>
