--- a/src/components/TabComponent/TabComponent.html
+++ b/src/components/TabComponent/TabComponent.html
@@ -1,4 +1,5 @@
 <div>
+	<a @click="click" href="#" class="close"></a>
 	<img style="width:16px;height:16px;" :src="tab.favIconUrl"/>
 	<a class="tab-link" target="blank" :href="tab.url">{{tab.title}}</a>
 </div>
