--- a/src/components/TabComponent/TabComponent.html
+++ b/src/components/TabComponent/TabComponent.html
@@ -1,5 +1,5 @@
-<div>
-	<a @click="click" href="#" class="close"></a>
-	<img style="width:16px;height:16px;" :src="tab.favIconUrl"/>
+<div v-on:mouseenter="hover" v-on:mouseleave='unHover'>
+	<span class="close" :class="hovered ? '' : 'hide'"></span>
+	<img class="link-image" :src="tab.favIconUrl"/>
 	<a class="tab-link" target="blank" :href="tab.url">{{tab.title}}</a>
 </div>
