--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -1,7 +1,7 @@
 <md-list-item>
 	<md-list>
 		<span class="md-display-1"> Tabset: {{ tabset.id }}</span>
-		<md-button class="md-raised md-accent">Accent</md-button>
+		<md-button class="md-raised md-accent" v-on:click="deleteTabset">Delete tabset</md-button>
 		<TabComponent v-for="tab in tabset.tabs" :key="tab.id" :tab="tab" :tabsetID="tabset.id"/>
 	</md-list>	
 </md-list-item>
