--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -1,7 +1,8 @@
 <md-list-item>
 	<md-list>
-		<span class="md-display-1"> Tabset: {{ tabset.id }}</span>
+		<span class="md-display-1 tabset-name"> Tabset: {{ tabset.id }}</span>
 		<md-button class="md-raised md-accent" v-on:click="deleteTabset">Delete tabset</md-button>
+		<span class="md-caption created-at">Created at {{ tabset.createdAt.toString() }}</span>
 		<TabComponent v-for="tab in tabset.tabs" :key="tab.id" :tab="tab" :tabsetID="tabset.id"/>
 	</md-list>	
 </md-list-item>
