--- a/src/components/TabComponent/TabComponent.html
+++ b/src/components/TabComponent/TabComponent.html
@@ -3,5 +3,5 @@
 		close
 	</i>
 	<img class="link-image" :src="tab.favIconUrl"/>
-	<a class="tab-link" target="blank" :href="tab.url" v-on:click="deleteTab">{{ tab.title }}</a>
+	<a class="tab-link md-list-item-text" target="blank" :href="tab.url" v-on:click="deleteTab">{{ tab.title }}</a>
 </md-list-item>
