--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -1,8 +1,13 @@
 <md-list-item>
-	<md-list>
-		<span class="md-display-1 tabset-name"> Tabset: {{ tabset.id }}</span>
-		<md-button class="md-raised md-accent" v-on:click="deleteTabset">Delete tabset</md-button>
-		<span class="md-caption created-at">Created at {{ tabset.createdAt.toString() }}</span>
-		<TabComponent v-for="tab in tabset.tabs" :key="tab.id" :tab="tab" :tabsetID="tabset.id"/>
-	</md-list>	
+	<md-content class="tabset-content md-elevation-6">
+		<md-list>
+			<span class="md-title tabset-name md-list-item-text"> Tabset: {{ tabset.id }}</span>
+			<span class="md-caption created-at md-list-item-text">Created at {{ tabset.createdAt.toString() }}</span>
+			<TabComponent v-for="tab in tabset.tabs" :key="tab.id" :tab="tab" :tabsetID="tabset.id"/>
+			<div class="control__button">
+				<md-button class="md-raised md-primary">Restore tabset</md-button>
+				<md-button class="md-raised md-accent" v-on:click="deleteTabset">Delete tabset</md-button>
+			</div>
+		</md-list>
+	</md-content>
 </md-list-item>
