--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -1,8 +1,11 @@
 <md-list-item>
-	<md-content class="tabset-content md-elevation-6">
-		<md-list>
-			<span class="md-title tabset-name md-list-item-text"> Tabset: {{ tabset.id }}</span>
-			<span class="md-caption created-at md-list-item-text">Created at {{ tabset.createdAt.toString() }}</span>
+	<md-content class="tabset__content md-elevation-6">
+		<md-list class="tabs__list">
+			<div style="height: 60px; padding-top:5px">
+				<span class="md-title tabset__name md-list-item-text"> Tabset: {{ tabset.id }}</span>
+				<span class="md-caption created__at md-list-item-text">Created at {{ tabset.createdAt.toString() }}</span>
+			</div>
+			<md-divider></md-divider>
 			<TabComponent v-for="tab in tabset.tabs" :key="tab.id" :tab="tab" :tabsetID="tabset.id"/>
 			<div class="control__button">
 				<md-button class="md-raised md-primary">Restore tabset</md-button>
