--- a/src/components/TabComponent/TabComponent.html
+++ b/src/components/TabComponent/TabComponent.html
@@ -1,7 +1,7 @@
 <md-list-item v-on:mouseenter="hover" v-on:mouseleave="unHover" class="tab__list__item">
-	<i class="delete-tabset-icon material-icons" :class="{ hide: !tabIsHovered }" v-on:click="deleteTab">
+	<i class="delete-tabset-icon material-icons" :class="{ hide: !tabIsHovered || lockedTabset }" @click="deleteTab">
 		close
 	</i>
 	<img class="link-image" :src="tab.favIconUrl"/>
-	<a class="tab-link md-list-item-text" target="blank" :href="tab.url" v-on:click="deleteTab">{{ tab.title }}</a>
+	<a class="tab-link md-list-item-text" target="blank" :href="tab.url" @click="deleteTab">{{ tab.title }}</a>
 </md-list-item>
