--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -7,7 +7,7 @@
 				</span>
 				
 				<md-field md-inline :md-counter="false" class="tabsetname__input" :class="{ hide__input: !nameIsChanging || tabset.locked }">
-			      <md-input focues maxlength=40 v-model="tabsetName" @keyup.13="saveTabsetName" v-autowidth="{maxWidth: '960px', minWidth: '20px', comfortZone: 0}">
+			      <md-input focus maxlength=40 v-model="tabsetName" @keyup.13="saveTabsetName" v-autowidth="{maxWidth: '960px', minWidth: '20px', comfortZone: 0}">
 			      	
 			      </md-input>
 			    </md-field>
