--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -1,5 +1,5 @@
 <md-list-item>
-	<md-content class="tabset__content md-elevation-6">
+	<md-content md-with-hover class="tabset__content md-elevation-2" :class="{ 'md-elevation-6': isHovered }" @mouseenter="isHovered = true" @mouseleave="isHovered = false">
 		<md-list class="tabs__list">
 			<div style="height: 60px; padding-top:5px">
 				<span class="md-title tabset__name md-list-item-text" :class="{ hide__tabset__title: nameIsChanging && !tabset.locked }" @click="startChangingTabsetName"> 
