--- a/src/components/TabsetComponent/TabsetComponent.html
+++ b/src/components/TabsetComponent/TabsetComponent.html
@@ -6,11 +6,8 @@
 					{{ tabset.tabsetName || tabset.id }}
 				</span>
 				
-				<md-field md-inline :md-counter="false" class="tabsetname__input" :class="{ 
-																							hide__input: !nameIsChanging || tabset.locked, 
-																							'md-focused': nameIsChanging && !tabset.locked
-																						 }">
-			      <md-input ref="tabsetNameInput" maxlength=40 v-model="tabsetName" @keyup.13="saveTabsetName" v-autowidth="{maxWidth: '960px', minWidth: '20px', comfortZone: 0}">
+				<md-field md-inline :md-counter="false" class="tabsetname__input" :class="{ hide__input: !nameIsChanging || tabset.locked }">
+			      <md-input ref="tabsetNameInput" maxlength=50 v-model="tabsetName" @keyup.13="saveTabsetName" v-autowidth="{maxWidth: '960px', minWidth: '20px', comfortZone: 0}">
 			      	
 			      </md-input>
 			    </md-field>
