replace icon image if favIcon not exist

--- a/src/components/TabComponent/TabComponent.html
+++ b/src/components/TabComponent/TabComponent.html
@@ -2,6 +2,6 @@
 	<i class="delete-tabset-icon material-icons" :class="{ hide: !tabIsHovered || lockedTabset }" @click="deleteTab">
 		close
 	</i>
-	<img class="link-image" :src="tab.favIconUrl"/>
+	<img class="link-image" :src="tab.favIconUrl ? tab.favIconUrl : 'https://cdn3.iconfinder.com/data/icons/faticons/32/globe-01-256.png'"/>
 	<a class="tab-link md-list-item-text" target="blank" :href="tab.url" @click="deleteTab">{{ tab.title }}</a>
 </md-list-item>
