--- a/src/components/TheNavigationBarComponent/TheNavigationBarComponent.html
+++ b/src/components/TheNavigationBarComponent/TheNavigationBarComponent.html
@@ -1,18 +1,18 @@
 <md-list>
   <md-list-item>
     <md-icon>move_to_inbox</md-icon>
-    <span class="md-list-item-text">Inbox</span>
+    <span class="md-list-item-text">Рома пидор</span>
   </md-list-item>
   <md-list-item>
     <md-icon>send</md-icon>
-    <span class="md-list-item-text">Sent Mail</span>
+    <span class="md-list-item-text">Рома гандон</span>
   </md-list-item>
   <md-list-item>
     <md-icon>delete</md-icon>
-    <span class="md-list-item-text">Trash</span>
+    <span class="md-list-item-text">Рома хуесос</span>
   </md-list-item>
   <md-list-item>
     <md-icon>error</md-icon>
-    <span class="md-list-item-text">Spam</span>
+    <span class="md-list-item-text">Рома лох</span>
   </md-list-item>
 </md-list>
