added show only stared tabsets button

--- a/src/components/TheNavigationBarComponent/TheNavigationBarComponent.html
+++ b/src/components/TheNavigationBarComponent/TheNavigationBarComponent.html
@@ -1,7 +1,8 @@
 <md-list>
   <md-list-item>
     <md-icon>move_to_inbox</md-icon>
-    <span class="md-list-item-text">Рома пидор</span>
+    <span class="md-list-item-text" @click="toggleShowOnlyStared">Рома пидор</span>
+    <md-badge class="md-primary md-square colored" md-content='Тут цифры'></md-badge>
   </md-list-item>
   <md-list-item>
     <md-icon>send</md-icon>
