--- a/src/components/TabsetsListComponent/TabsetsListComponent.html
+++ b/src/components/TabsetsListComponent/TabsetsListComponent.html
@@ -1,12 +1,9 @@
 <div class="md-layout md-gutter md-alignment-top-center">
-  
-  	<md-list v-if="fullTabsetsData.length">
-  		<div v-for="tabset in fullTabsetsData">
-			<TabsetComponent v-if="tabset" :tabset="tabset" :key="tabset.id"/>
-<!-- 		<span style="display: none;" :class="{ show__alert: !this.$store.state.tabsets.length }" class="md-display-1">
-			Oops! Looks like you haven't any tabset yet.
-		</span> -->
-		</div>	
-	</md-list>
+
+    <md-list v-if="fullTabsetsData.length">
+        <div v-for="tabset in fullTabsetsData">
+            <TabsetComponent v-if="tabset && tabset.show" :tabset="tabset" :key="tabset.id"/>
+        </div>
+    </md-list>
 
 </div>
