--- a/src/components/TheNavigationBarComponent/TheNavigationBarComponent.html
+++ b/src/components/TheNavigationBarComponent/TheNavigationBarComponent.html
@@ -1,19 +1,19 @@
 <md-list>
   <md-list-item>
     <md-icon>move_to_inbox</md-icon>
-    <span class="md-list-item-text" @click="toggleShowOnlyStared">Рома пидор</span>
+    <span class="md-list-item-text" @click="toggleShowOnlyStared">Stared</span>
     <md-badge class="md-primary md-square colored" md-content='Тут цифры'></md-badge>
   </md-list-item>
   <md-list-item>
     <md-icon>send</md-icon>
-    <span class="md-list-item-text">Рома гандон</span>
+    <span class="md-list-item-text">Lorem</span>
   </md-list-item>
   <md-list-item>
     <md-icon>delete</md-icon>
-    <span class="md-list-item-text">Рома хуесос</span>
+    <span class="md-list-item-text">Lorem</span>
   </md-list-item>
   <md-list-item>
     <md-icon>error</md-icon>
-    <span class="md-list-item-text">Рома лох</span>
+    <span class="md-list-item-text">Lorem</span>
   </md-list-item>
 </md-list>
